# freesound-audio-tagging-benchmark

./: CLAUDE.md  LICENSE  Makefile  README.md  main.py  pyproject.toml  uv-commands
configs/: baseline.yaml  problematic_files.csv
docs/: ARCHIVE_project_plan_and_tracking.md  architecture_analysis_and_recommendations.md  bucketing_strategy.md  cleanup_and_implementation_plan.md  dic_cnn_architecture_analysis.md  frequency_spacing_analysis.md  implementation_summary.md  project_plan.md
reports/: dataset_stats.json
src/: data.py  devel.py  device.py  explore.py  plot_utils.py  signal_tools.py  spectrogram.py  spectrogram_optimized.py  utils.py
src/core/: config.py  device.py
src/data/: augmentation.py  dataset.py
src/features/: signal_tools.py  spectrogram.py  spectrogram_optimized.py
src/models/: baseline_cnn.py  components.py  efficient_cnn.py
src/scripts/: devel.py  evaluate.py  explore.py  train.py
src/training/: losses.py  metrics.py
src/visualization/: plots.py
tests/: __init__.py  test_augmentation.py  test_components.py  test_efficient_cnn.py  test_features.py  test_models.py  test_signal_tools.py
